--- a/style.css
+++ b/style.css
@@ -110,7 +110,20 @@ nav ul li a:hover {
 /* small : for mobile device */
 @media screen and (max-width: 576px) {
   nav ul {
-    display: none;
+    /* display: none; */
+    position: absolute;
+    flex-direction: column;
+    background: rgba(0, 0, 0, 0.1);
+    height: 100vh;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: -1;
+    transform: translateY(0%);
+    transition: 1s;
+  }
+
+  nav ul.top-slider {
+    transform: translateY(-100%);
   }
 
   .hamburger-menu {
